--- a/index.html
+++ b/index.html
@@ -6,20 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <title>Nome</title>
+    <title>peaple</title>
 </head>
 <body class="body">
     <script src="app/app.js"></script>
     <header>
-        <p id="logo">Logo</p>
+        <img id="logo" src="img/logo.png">
+        <!-- <p id="logo">Logo</p> -->
     </header>
     
     <article class="art">
-        <h1 id="title">Bem vindo!</h1><br></br>
+        <h1 id="title">Bem vindo!</h1><br>
         <label class="poslog" for="login">Login:</label>
         <input type="text" id="user" name="login"><br></br>
-        <label class="poslog" for="senha">Senha:</label>
-        <input type="text" id="psw" name="senha"><br></br>
+        <label class="pospsw" for="senha">Senha:</label>
+        <input type="text" id="psw" name="senha"><br>
         <input class="button posbutton" type="submit" id="entrar" onclick="Entrar()" value="Entrar" />
         <a href="cadastro.html">
             <input class="button" type="button" value="Cadastre-se">
