--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +12,6 @@
     <script src="app/app.js"></script>
     <header>
         <img id="logo" src="img/logo.png">
-        <!-- <p id="logo">Logo</p> -->
     </header>
     
     <article class="art">
