--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
     </header>
     
     <article class="art">
-        <h1 id="title">Bem vindo!</h1><br>
+        <h1 id="title">Bem vindo!</h1>
 
         <div class="user-pwd-container">
             <label class="poslog" for="login"><i class="bi bi-person-fill"></i></label>
-            <input type="text" id="user" name="login" placeholder="usuário"><br></br>
+            <input type="text" id="user" name="login" placeholder="usuário">
         </div>
 
         <div class="user-pwd-container">
             <label class="pospsw" for="senha"><i class="bi bi-lock-fill"></i></label>
-            <input type="text" id="psw" name="senha" placeholder="senha"><br>
+            <input type="text" id="psw" name="senha" placeholder="senha">
         </div>
 
         <div id="btn-container">
