--- a/cadastro.html
+++ b/cadastro.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <title>Nome</title>
+    <title>Peaple | Cadastro</title>
 </head>
 <body>
     <script src="app/app.js"></script>
