--- a/profile.html
+++ b/profile.html
@@ -5,10 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="./style/style.css">
     <title>Document</title>
 </head>
 <body>
+    <div class="body">
+        <center>
+            <h1>Teste</h1>
+        </center>
+    </div>
+    <div class="profile-container">
+        <div class=" img-profile">
+            <img src="https://picsum.photos/400/500" alt="">
+        </div>
+        <button><a href="./profile.html">Atualizar</a> </button>
+    </div>
     <script src="app/app.js"></script>
-    <p>Teste</p>
 </body>
 </html>
