--- a/cadastro.html
+++ b/cadastro.html
@@ -15,7 +15,7 @@
 <body class="body">
     <script src="app/app.js"></script>
     <header>
-        <img id="logo" src="img/logo.png">
+        <img id="logo" src="img/logo.png" alt="Logo">
     </header>
     <article class="art art-cadastro">
         <h1 id="title">Cadastre-se</h1>
@@ -47,8 +47,8 @@
         </div>
 
         <div class="user-pwd-container">
-            <label class="poslog" for="senha"><i class="bi bi-lock-fill"></i></label>
-            <input type="text" id="psw" name="senha" placeholder="confirmar senha">
+            <label class="poslog" for="confsenha"><i class="bi bi-lock-fill"></i></label>
+            <input type="text" id="cpsw" name="confsenha" placeholder="confirmar senha">
         </div>
         
         <div id="btn-container">
