--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="body">
     <script src="app/app.js"></script>
     <header>
-        <img id="logo" src="img/logo.png">
+        <img id="logo" src="img/logo.png" alt="Logo">
     </header>
     
     <article class="art">
