input type='password'

--- a/cadastro.html
+++ b/cadastro.html
@@ -43,12 +43,12 @@
 
         <div class="user-pwd-container">
             <label class="poslog" for="senha"><i class="bi bi-lock"></i></label>
-            <input type="text" id="psw" name="senha" placeholder="senha">
+            <input type="password" id="psw" name="senha" placeholder="senha">
         </div>
 
         <div class="user-pwd-container">
             <label class="poslog" for="confsenha"><i class="bi bi-lock-fill"></i></label>
-            <input type="text" id="cpsw" name="confsenha" placeholder="confirmar senha">
+            <input type="password" id="cpsw" name="confsenha" placeholder="confirmar senha">
         </div>
         
         <div id="btn-container">
