--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div class="user-pwd-container">
             <label class="pospsw" for="senha"><i class="bi bi-lock-fill"></i></label>
-            <input type="text" id="psw" name="senha" placeholder="senha">
+            <input type="password" id="psw" name="senha" placeholder="senha">
         </div>
 
         <div id="btn-container">
