--- a/profile.html
+++ b/profile.html
@@ -18,7 +18,7 @@
     </div>
     <div>
         <h1 id="cname"></h1>
-        <input type="submit" id="atualizar" onclick="Refresh()" value="Atualizar" />
+        <input type="submit" id="atualizar" onclick="Refresh()" value="Atualizar" /> \\se você conseguir, coloca o simbolo do refresh no botão, no value\\
         <h2 id="bdate"></h2>
         <h2 id="city"></h2>
     </div>
