--- a/cadastro.html
+++ b/cadastro.html
@@ -32,7 +32,7 @@
 
         <div class="user-pwd-container">
             <label class="poslog" for="bdate"><i class="bi bi-calendar2-check-fill"></i></label>
-            <input type="text" id="bdate" name="bdate" placeholder="data de nascimento">
+            <input type="date" id="bdate" name="bdate" placeholder="data de nascimento">
         </div>
 
         <div class="user-pwd-container">
