main section profile add

--- a/profile.html
+++ b/profile.html
@@ -18,9 +18,10 @@
           
           <!-- <h2 id="bdate"></h2> -->
           <h2 id="city"></h2>
+          <input type="submit" id="sair" onclick="Clean()" value="Sair" />
         </div>
       </aside>
-      <div class="profile-container">
+      <div class="content-container">
         <div class="img-profile">
           <img src="https://picsum.photos/400/500" alt="" />
         </div>
@@ -30,7 +31,7 @@
             onclick="Refresh()"
             value="Atualizar"
           />
-        <input type="submit" id="sair" onclick="Clean()" value="Sair" />
+        
 
       </div>
     </main>
