--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,7 @@
     <body onload="Perfil()"></body>
     <main>
       <aside>
-          <div id="perfil-image">img</div>
+          <div id="perfil-image"><img id="perfil-foto" src="https://picsum.photos/150" alt=""></div>
         <div>
           <h1 id="cname"></h1>
           
