--- a/profile.html
+++ b/profile.html
@@ -11,8 +11,7 @@
     <link rel="stylesheet" href="./style/profile.css" />
     <title>Peaple | Profile</title>
   </head>
-  <body>
-    <body onload="Perfil()"></body>
+  <body onload="Perfil()">
     <main>
       <aside>
           <div id="perfil-image"><img id="perfil-foto" src="https://picsum.photos/150" alt=""></div>
