--- a/cadastro.html
+++ b/cadastro.html
@@ -13,7 +13,7 @@
     <title>Peaple | Cadastro</title>
 </head>
 <body class="body">
-    <script src="app/app.js"></script>
+    <script src="app/cadastro.js"></script>
     <header>
         <img id="logo" src="img/logo.png" alt="Logo">
     </header>
@@ -21,34 +21,30 @@
         <h1 id="title">Cadastre-se</h1>
 
         <div class="user-pwd-container">
-            <label class="poslog" for="login"><i class="bi bi-person-plus"></i></label>
-            <input type="text" id="user" name="login" placeholder="login">
+            <label class="poslog" for="login"><i class="bi bi-envelope"></i></label>
+            <input type="text" id="user" name="login" placeholder="E-mail">
         </div>
 
         <div class="user-pwd-container">
-            <label class="poslog" for="cname"><i class="bi bi-person-plus-fill"></i></label>
-            <input type="text" id="cname" name="cname" placeholder="nome">
+            <label class="poslog" for="cname"><i class="bi bi-person-lines-fill"></i></label>
+            <input type="text" id="fname" name="cname" placeholder="Nome">
         </div>
 
         <div class="user-pwd-container">
-            <label class="poslog" for="bdate"><i class="bi bi-calendar2-check-fill"></i></label>
-            <input type="date" id="bdate" name="bdate" placeholder="data de nascimento">
+            <label class="poslog" for="bdate"><i class="bi bi-person-lines-fill"></i></label>
+            <input type="text" id="lname" name="bdate" placeholder="Sobrenome">
         </div>
 
-        <div class="user-pwd-container">
-
-            <label class="poslog" for="city"><i class="bi bi-geo-alt-fill"></i></label>
-            <input type="text" id="city" name="city" placeholder="cidade">
-        </div>
+        
 
         <div class="user-pwd-container">
             <label class="poslog" for="senha"><i class="bi bi-lock"></i></label>
-            <input type="password" id="psw" name="senha" placeholder="senha">
+            <input type="password" id="psw" name="senha" placeholder="Senha">
         </div>
 
         <div class="user-pwd-container">
             <label class="poslog" for="confsenha"><i class="bi bi-lock-fill"></i></label>
-            <input type="password" id="cpsw" name="confsenha" placeholder="confirmar senha">
+            <input type="password" id="cpsw" name="confsenha" placeholder="Confirmar senha">
         </div>
         
         <div id="btn-container">
