--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Peaple | Login</title>
 </head>
 <body class="body">
-    <script src="app/app.js"></script>
+    <script src="app/login.js"></script>
     <header>
         <img id="logo" src="img/logo.png" alt="Logo">
     </header>
@@ -32,7 +32,7 @@
         </div>
 
         <div id="btn-container">
-            <input class="button posbutton" type="submit" id="entrar" onclick="Entrar()" value="Entrar" />
+            <input class="button posbutton" type="submit" id="entrar" onclick="Enter()" value="Entrar" />
             <a href="cadastro.html">
                 <input class="button" type="button" value="Cadastre-se">
             </a>
