--- a/profile.html
+++ b/profile.html
@@ -30,7 +30,7 @@
               <img id="avtr" src="" alt="mdo" width="32" height="32" class="rounded-circle">
             </a>
             <ul class="dropdown-menu text-small">
-              <li><a class="dropdown-item" href="/edprofile.html">Editar perfil</a></li>
+              <li><a class="dropdown-item" href="edprofile.html">Editar perfil</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" onclick="Clean()">Sair</a></li>
             </ul>
