--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
 <body class="body">
     <script src="app/login.js"></script>
     <header>
-        <img id="logo" src="img/logo.png" alt="Logo">
+        <img id="logo" src="img/newlogo1.png" alt="Logo">
     </header>
     
     <article class="art">
         <h1 id="title">Bem vindo!</h1>
 
         <div class="user-pwd-container">
-            <label class="poslog" for="login"><i class="bi bi-person-fill"></i></label>
-            <input type="text" id="user" name="login" placeholder="usuário">
+            <label for="login"><i class="bi bi-person-fill"></i></label>
+            <input class="input" type="text" id="user" name="login" placeholder="usuário">
         </div>
 
         <div class="user-pwd-container">
-            <label class="pospsw" for="senha"><i class="bi bi-lock-fill"></i></label>
-            <input type="password" id="psw" name="senha" placeholder="senha">
+            <label for="senha"><i class="bi bi-lock-fill"></i></label>
+            <input class="input" type="password" id="psw" name="senha" placeholder="senha">
         </div>
 
         <div id="btn-container">
